Update summary colors in HTML details sections

--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -552,7 +552,7 @@
 
   <!-- Detalhe: como as áreas foram somadas -->
   <details style="margin-top:10px;">
-    <summary style="cursor:pointer;">Ver como somei as áreas <strong style="color:#c00;">na cor verde</strong> na tabela (c1, c2, c3)</summary>
+    <summary style="cursor:pointer;">Ver como somei as áreas <strong style="color:#006400;">na cor verde</strong> na tabela (c1, c2, c3)</summary>
     <div style="font-family:ui-monospace, SFMono-Regular, Menlo, Consolas, 'Liberation Mono', monospace; font-size:0.92rem; white-space:pre-wrap; background:#fafafa; border:1px solid #eee; padding:8px; margin-top:6px;">
 <strong>c1 (1310–1280 cm⁻¹)</strong>
 Áreas: 3,6083 + 3,1577 = <strong>6,7660</strong>
@@ -568,7 +568,7 @@
 
 <!-- Como cheguei aos valores em vermelho (A-values, N e x) -->
 <details style="margin-top:10px;">
-  <summary style="cursor:pointer;">Ver como obtive os <span style="color:#c00;font-weight:700;">valores na cor vermelha</span> (A-values, N e x)</summary>
+  <summary style="cursor:pointer;">Ver como obtive os valores <span style="color:#c00;font-weight:700;">na cor vermelha</span> (A-values, N e x)</summary>
 
   <div style="background:#fafafa;border:1px solid #eee;padding:10px;line-height:1.6;font-size:0.95rem;">
     <ol style="margin:0 0 8px 18px;">
