--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -652,83 +652,86 @@ x = N/n = 2,85×10¹⁷ / 1,60×10²² = 1,78×10⁻⁵ cm = <span style="color:
   >
 </div>
 
-<!-- ===================== RESPOSTA 2.b — Verificação no SRIM/TRIM ===================== -->
+<!-- ===================== RESPOSTA 2.b — Verificação no SRIM/TRIM (C1) ===================== -->
 <div style="border:2px dashed #999; background:#fffdf5; padding:12px; border-radius:8px; margin:12px 0;">
 
-  <h4 style="margin:0 0 8px 0;">Resposta 2.b — Stopping power e alcance no SRIM</h4>
+  <h4 style="margin:0 0 8px 0;">Resposta 2.b — Stopping power e alcance no SRIM (janela <em>c1</em>)</h4>
 
   <p style="margin:4px 0 10px; text-align:justify;">
-    Eu utilizei as espessuras estimadas na etapa 2.a (pelas bandas <em>c1</em>, <em>c2</em> e <em>c3</em>) como espessura do filme de N₂O no SRIM e verifiquei se o
-    alcance projetado do feixe foi maior ou menor que essas espessuras. Assim, concluí se houve implantação (íons pararam no filme) ou atravessamento.
+    Eu verifiquei no SRIM/TRIM se o alcance projetado do feixe ultrapassou a espessura do filme obtida em <strong>2.a</strong> para a banda
+    <strong>c1</strong> (janela 1310–1280&nbsp;cm<sup>−1</sup>). Para ilustrar, utilizei a execução mostrada no print abaixo, em que
+    li os valores diretamente da tabela <em>Ion Stopping &amp; Range Tables</em>.
   </p>
 
-  <ol style="margin:0 0 10px 18px; padding:0; line-height:1.55;">
-    <li><strong>Eu defini o íon do feixe:</strong> em <em>Ion</em> selecionei <strong>Xe</strong> e inseri a energia do experimento (ex.: <strong>90&nbsp;MeV</strong>).</li>
-    <li><strong>Eu montei o alvo (Target):</strong> adicionei <strong>N</strong> (stoich=2) e <strong>O</strong> (stoich=1) via <em>Add Element</em>, defini o composto <em>N₂O</em> e
-        informei a <em>Density</em> do N₂O sólido a ~11&nbsp;K (ex.: <strong>1,17 g/cm³</strong>).</li>
-    <li><strong>Eu ajustei as unidades:</strong> em <em>Stopping Power Units</em> selecionei <strong>keV / (µm)</strong>.</li>
-    <li><strong>Eu inseri a espessura do filme:</strong> rodei o cálculo para cada valor obtido em 2.a:
-      <div style="font-family:ui-monospace, Menlo, Consolas, monospace; background:#fafafa; border:1px solid #eee; padding:6px; margin-top:6px;">
-        x<sub>c1</sub> = 0,909 µm &nbsp;•&nbsp; x<sub>c2</sub> = 3,461 µm &nbsp;•&nbsp; x<sub>c3</sub> = 0,178 µm
-      </div>
-      <small style="opacity:.85;">(Opcional: use também a média/intervalo de espessura como valor “representativo”.)</small>
-    </li>
-    <li><strong>Eu calculei a tabela:</strong> cliquei <em>Calculate Table</em> e anotei o <em>stopping power</em>, o <strong>alcance projetado</strong> R<sub>p</sub> e o <strong>estraggle</strong> ΔR<sub>p</sub>.</li>
-  </ol>
+  <!-- print pronto do SRIM para c1 -->
+  <div class="print-area" style="text-align:center; margin-top:6px;">
+    <strong>Print 4 — SRIM/TRIM configurado para o caso <em>c1</em></strong><br>
+    <img
+      src="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/gif/srim-c1-complete.png?raw=1"
+      alt="SRIM/TRIM para N2O (11 K) — Caso c1"
+      style="max-width:100%; height:auto; display:block; margin:8px auto; border:1px solid #ddd; padding:2px;"
+    >
+  </div>
 
-  <!-- Tabela para você colar os números do SRIM -->
-  <div style="text-align:justify; margin-top:8px;">
-    <strong>Resultados SRIM (valores que eu coletei)</strong>
+  <!-- Passos que eu executei (TRIM e SR Tables) -->
+  <details style="margin-top:8px;">
+    <summary style="cursor:pointer;"><strong>Como configurei o TRIM e o &ldquo;Ion Stopping &amp; Range Tables&rdquo; (passo a passo)</strong></summary>
+    <ol style="margin:8px 0 0 18px; padding:0; line-height:1.55; text-align:justify;">
+      <li><strong>Alvo (N₂O sólido, 11&nbsp;K):</strong> em <em>Target</em> adicionei <span style="white-space:nowrap;">N (Z=7)</span> duas vezes (stoich=2) e <span style="white-space:nowrap;">O (Z=8)</span> uma vez (stoich=1) ou usei <em>Compound Dictionary → Nitrous Oxide</em>. Defini <strong>Density = 1,1593 g/cm³</strong> (11&nbsp;K).</li>
+      <li><strong>Íon e varredura de energia (SR Tables):</strong> abri <em>Ion Stopping &amp; Range Tables</em> e selecionei <strong>Hydrogen (H)</strong> para gerar a tabela entre 10&nbsp;keV e 10&nbsp;MeV (como no print fornecido). Em <em>Stopping Power Units</em> mantive as unidades padrão e usei o fator da tabela para ler em <strong>keV/µm</strong> quando necessário.</li>
+      <li><strong>Leitura da linha de interesse:</strong> para comparar com a espessura de <em>c1</em>, li a linha <strong>90&nbsp;keV</strong> da tabela (ver área inferior do print), que reportou o <em>Projected Range</em> e os estraggles.</li>
+    </ol>
+  </details>
+
+  <!-- Resultados lidos do seu log (linha de 90 keV) -->
+  <div style="text-align:justify; margin-top:10px;">
+    <strong>Resultados lidos (tabela do SRIM — linha de 90&nbsp;keV):</strong>
     <table border="1" cellpadding="6" style="border-collapse:collapse; width:100%; max-width:880px; margin:6px 0;">
       <thead style="background:#f5f5f5;">
         <tr>
           <th style="text-align:left;">Parâmetro</th>
           <th style="text-align:right;">Valor</th>
-          <th style="text-align:left;">Comentário</th>
+          <th style="text-align:left;">Origem</th>
         </tr>
       </thead>
       <tbody>
         <tr>
           <td>Stopping power eletrônico S<sub>e</sub> (keV/µm)</td>
-          <td style="text-align:right;"><em><!-- cole do SRIM --></em></td>
-          <td>Perda de energia por unidade de espessura no N₂O.</td>
+          <td style="text-align:right;">&approx; 6,66×10<sup>−1</sup> &times; 1,1593×10<sup>2</sup> &rarr; <strong>&approx; 77</strong></td>
+          <td>Conversão da unidade listada para keV/µm (rodapé da tabela do SRIM).</td>
         </tr>
         <tr>
           <td>Alcance projetado R<sub>p</sub> (µm)</td>
-          <td style="text-align:right;"><em><!-- cole do SRIM --></em></td>
-          <td>Profundidade média onde os íons pararam.</td>
+          <td style="text-align:right;"><strong>1,47</strong></td>
+          <td>Linha “90,00 keV → 1,47 µm”.</td>
         </tr>
         <tr>
-          <td>Estraggle ΔR<sub>p</sub> (µm)</td>
-          <td style="text-align:right;"><em><!-- cole do SRIM --></em></td>
-          <td>Largura da distribuição de alcances.</td>
+          <td>Estraggle longitudinal ΔR<sub>p</sub> (µm)</td>
+          <td style="text-align:right;"><strong>0,151</strong></td>
+          <td>“Longitudinal Straggling = 1507&nbsp;Å = 0,1507&nbsp;µm”.</td>
         </tr>
       </tbody>
     </table>
   </div>
 
-  <!-- Como decidir implantação -->
-  <div style="margin-top:10px; line-height:1.55; text-align:justify;">
-    <strong>Decisão (critérios que eu apliquei)</strong>
-    <ul style="margin:6px 0 0 18px;">
-      <li><em>Sem implantação</em> (atravessou): se <strong>R<sub>p</sub> − ΔR<sub>p</sub> &gt; x</strong>.</li>
-      <li><em>Implantação parcial</em>: se <strong>R<sub>p</sub> − ΔR<sub>p</sub> ≤ x ≤ R<sub>p</sub> + ΔR<sub>p</sub></strong>.</li>
-      <li><em>Implantação clara</em> (parou dentro): se <strong>R<sub>p</sub> + ΔR<sub>p</sub> &lt; x</strong>.</li>
-    </ul>
-    <div style="font-family:ui-monospace, Menlo, Consolas, monospace; background:#fafafa; border:1px dashed #ddd; padding:8px; margin-top:6px;">
-      Para cada espessura que obtive em 2.a:<br>
-      • x = 0,178 µm (c3) → comparar com R<sub>p</sub> ± ΔR<sub>p</sub>.<br>
-      • x = 0,909 µm (c1) → comparar com R<sub>p</sub> ± ΔR<sub>p</sub>.<br>
-      • x = 3,461 µm (c2) → comparar com R<sub>p</sub> ± ΔR<sub>p</sub>.
+  <!-- Comparação com a espessura da banda c1 e conclusão -->
+  <div style="margin-top:10px; line-height:1.6; text-align:justify;">
+    <strong>Comparação com a espessura de c1 (obtida em 2.a)</strong><br>
+    Espessura do filme (c1): <code>x<sub>c1</sub> = 0,909&nbsp;µm</code><br>
+    Alcance efetivo mínimo: <code>R<sub>p</sub> − ΔR<sub>p</sub> = 1,47 − 0,151 = 1,319&nbsp;µm</code>
+    <div style="border-left:3px solid #4a7; padding-left:10px; margin-top:6px;">
+      Como <strong>1,319&nbsp;µm &gt; 0,909&nbsp;µm</strong>, o feixe ultrapassou a espessura do filme no caso <em>c1</em>.  
+      <strong>Conclusão:</strong> para <em>c1</em>, não houve implantação; os íons atravessaram o gelo (regime de <em>through-range</em>).
     </div>
   </div>
 
-  <!-- Espaço para o print do SRIM/TRIM -->
-  <div class="print-area" style="text-align:center; margin-top:12px;">
-    <strong>Print 4 — SRIM configurado</strong><br>
-    <em>(Inserir captura: Ion=Xe (90 MeV), Target=N₂O com densidade, tabela de S<sub>e</sub>, R<sub>p</sub>, ΔR<sub>p</sub> e sua conclusão de implantação)</em>
-  </div>
+  <!-- Observação sobre repetição para c2 e c3 -->
+  <p class="muted" style="margin-top:10px; text-align:justify;">
+    Eu repetirei o mesmo procedimento para <strong>c2</strong> e <strong>c3</strong> (lendo as linhas de energia correspondentes e comparando
+    com <code>x<sub>c2</sub> = 3,461&nbsp;µm</code> e <code>x<sub>c3</sub> = 0,178&nbsp;µm</code>) para fechar a análise de implantação nas três janelas.
+  </p>
 </div>
+
 
     
 
